# interlude

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  devenv.nix  flake.nix  redraw_surface.patch
.github/workflows/: release.yml  rust.yml
assets/: end.opus  start.opus  start.opus.info
scripts/: capture_screenshot.sh
src/: audio.rs  cli.rs  inhibitors.rs  main.rs  scheduler.rs  session_lock.rs  shm.rs  state.rs  tiny_font.rs  wayland_lock.rs
