[package]
name = "interlude"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossbeam-channel = "0.5.15"
memmap2 = "0.9.9"
rustix = { version = "1.1.3", features = ["fs", "mm"] }
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["client", "staging"] }
xkbcommon = "0.9.0"
